package observer_pattern.design_refactoring.interfaces;

/**
 * IDisplayElement
 */
public interface IDisplayElement {

    public void display();

}